syntax = "proto3";

option go_package = "./genprotos";

message GetWeatherByCountryNameReq {
    string country_name = 1;
}

message GetWeatherByCountryNameRes {
    string country_name = 1;
    float temperature = 2;
}

service WeatherService {
    rpc GetWeatherByCountryName(GetWeatherByCountryNameReq) returns (stream GetWeatherByCountryNameRes);
}
